--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 <body>
    <div class="container">
       <header>
-         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias beatae dicta vero veniam doloribus neque
-            nulla eius. Quos pariatur tempora dolorum et. Itaque sequi laboriosam autem? Voluptatem et esse enim harum.
-            Dolorum, pariatur et aperiam reiciendis quaerat in tenetur. Dicta temporibus alias nesciunt, quaerat
-            incidunt
-            accusantium corrupti inventore hic obcaecati.
+         <p class="header">
+            HEADER
          </p>
       </header>
       <main>
@@ -44,12 +40,8 @@
          </p>
       </main>
       <footer>
-         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque laborum aspernatur tempora ab
-            praesentium?
-            Facere corrupti quia libero repudiandae reprehenderit id voluptatum eos non odio esse est vel unde quas iure
-            rem animi nesciunt quo consectetur eius accusamus adipisci, natus nisi. Libero fugit suscipit exercitationem
-            reiciendis autem repellat voluptatem aperiam?
+         <p class="footer">
+            FOOTER
          </p>
       </footer>
    </div>
