--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
          </p>
       </header>
       <main>
-         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse expedita, nesciunt
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse expedita, nesciunt
             explicabo non magni earum error necessitatibus corporis excepturi. Nobis accusamus ex, odio natus unde rerum
             dolore error, iure vero culpa quibusdam delectus neque. Repellat odio dolor quam et totam veritatis ipsum
             ex. Ipsum porro eius id pariatur est!
          </p>
-         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugiat alias maiores quos
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugiat alias maiores quos
             libero dolores accusantium veritatis maxime facilis iste explicabo voluptatem, possimus obcaecati repellat
             eveniet voluptates fugit pariatur nemo, sapiente eos! Voluptate magni distinctio reiciendis praesentium
             possimus dolor libero illum accusamus? Similique, numquam? Ullam harum ratione voluptate dicta non nulla,
